# Task-management-project

./: .replit  Task management report.docx  app.py  main.py  pyproject.toml  replit.md  reset_db.py
app/: __init__.py  forms.py  models.py  routes.py  test_db.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  index.html  login.html  register.html  task_form.html  tasks.html
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: Header.tsx  SearchBar.tsx  Sidebar.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx
client/src/hooks/: use-mobile.tsx
client/src/pages/: TasksPage.tsx
instance/: taskmaster.db
server/: routes.ts  storage.ts
shared/: schema.ts
templates/: base.html  login.html  register.html  task_form.html  tasks.html
